--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,13 +66,14 @@ dependencies {
     implementation 'com.karumi:dexter:4.2.0'
 
     //ToDo:RetroFit
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-    implementation ("com.squareup.okhttp3:okhttp:3.14.4"){
+    //OkHttp
+    implementation ("com.squareup.okhttp3:okhttp:3.12.12"){
         force = true //API 19 support
     }
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.12'
