--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ android {
 
 dependencies {
 
+    def paging_version = "1.0.0"
+    def view_model_version = "1.1.0"
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -92,4 +95,13 @@ dependencies {
 
     //ToDO: AVILoading
     implementation 'com.wang.avi:library:2.1.3'
+
+    //adding view model
+    implementation "android.arch.lifecycle:extensions:$view_model_version"
+    implementation "android.arch.lifecycle:viewmodel:$view_model_version"
+
+    //adding paging
+    implementation "android.arch.paging:runtime:$paging_version"
+
+
 }
