--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,5 +110,10 @@ dependencies {
     //ToDo: ImagerCropper
     implementation 'com.github.dhaval2404:imagepicker:1.7.1'
 
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true
+    }
+
 
 }
